fix: update alignment on sections - add additional padding to page hero content and links so the left edge of content aligns with other sections

--- a/src/assets/scss/components/_page-hero.scss
+++ b/src/assets/scss/components/_page-hero.scss
@@ -75,4 +75,11 @@
       grid-column: 4 / 6;
     }
   }
+
+  @media screen and (min-width: map-get($breakpoints, 'xl')) {
+    &__content,
+    &__links {
+      padding: calc(var(--size-xxxl) * 2);
+    }
+  }
 }
